fixed raised issues
